fix drop-down wrapping on mobile view, increase line-heigh & acadmic torrent .match css more preminant

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     --foreground-10: rgba(255, 255, 255, 0.10);
     --border-radius: 5px;
 
-    --line-height: 1.3;
+    --line-height: 1.4;
 
     color: var(--foreground-100);
     background-color: var(--background-color);
@@ -77,6 +77,12 @@ body>* {
     border: 0;
 }
 
+.wrap-dropdown {
+    white-space: nowrap;
+    overflow: auto;
+    padding-bottom: 10px;
+}
+
 .search-container h1 {
     font-size: 55px;
     text-align: center;
@@ -107,9 +113,10 @@ body>* {
 }
 
 .match {
-    text-decoration: underline;
+    text-decoration: underline yellow 2px;
     text-decoration-style: wavy;
     color: var(--foreground-100);
+    text-underline-offset: 4px;
 }
 
 select {
@@ -251,7 +258,7 @@ p {
     margin: 0;
     padding: 20px;
     font-size: 18px;
-    color: var(--foreground-75);
+    color: var(--foreground-100);
     word-wrap: break-word;
     line-height: var(--line-height);
 
@@ -330,9 +337,8 @@ h2 {
     color: var(--foreground-100);
     border-radius: 10px 10px 0px 0px;
     word-wrap: break-word;
+    line-height: var(--line-height);
 }
-
-
 
 a:hover {
     text-decoration: var(--foreground-75) wavy underline;
